--- a/forms/form.html
+++ b/forms/form.html
@@ -35,7 +35,7 @@
 <body>
     <h1 style="background-color:white;">Texas Scriptorium Food</h1>
     <section>
-        <form method='post' action='https://texasscriptorium.com/health.php'><br><br>
+        <form method='post' action='forms/health.php'><br><br>
     <label for='name'>Name: </label><input name='name' type='text' id='name' required><br><br>
     <label for='email'>Number of people who would like a gluten free option in your party: </label><input id='email' name='email' type='number' required><br><br>
     <input type='submit' style='color:black;' value='Submit'><br><br>
