--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body onload="typeWritter(); register();">
          <audio autoplay loop>
-              <source type="audio/mpeg" src="06 - Be Thou My Vision (Rop tú mo Baile).mp3">
+              <source type="audio/mpeg" src="/assets/audio/06 - Be Thou My Vision (Rop tú mo Baile).mp3">
           </audio>
           <!--<div class="warning" style="background-color: red;">Registration ends on, August 6</div>-->
         <header>
