--- a/index.html
+++ b/index.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <link rel="icon" href="Texas Scriptorium Logo (1).png">
-        <title>Texas ScriptureFest</title>
-        <meta name="keywords" content="texas, scripture fest">
-        <meta name="description" content="texas scripture fest">
-        <meta name="veiwpoint" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="texasscripturefeststylesheet.css">
-        <style>
-            
-        </style>
+        <script src="main.js"></script>
     </head>
     <body onload="typeWritter(); register();">
          <audio autoplay loop>
