--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <script src="main.js"></script>
+        <link rel="stylesheet" href="Styles/texasscripturefeststylesheet.css">
     </head>
     <body onload="typeWritter(); register();">
          <audio autoplay loop>
