--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
           <!--<div class="warning" style="background-color: red;">Registration ends on, August 6</div>-->
         <header>
             
-            <h1 class="headerh1"><img style="height: 45px; width: auto;margin-top: 35px;" alt="Texas" src="texas sc.png"> ScriptureFest</h1>
+            <h1 class="headerh1"><img style="height: 45px; width: auto;margin-top: 35px;" alt="Texas" src="assets/Images/texas sc.png"> ScriptureFest</h1>
             <h1 style="color:black;">July 29, 2023</h1>
             <h2 class="headerh2"><a id="x" TITLE="Visit Scripturefest.com" target="_blank" href="https://scripturefest.com" class="nava"></a></h2>
             <h2 class="headerh2"><nav><br>
-                <a class="nava" style="background-color: white" href="http://TexasScripturefest.com/index.html">Texas ScriptureFest</a>
-                <a class="nava" TITLE="Visit TexasScripturefest.com/location.html" href="http://TexasScripturefest.com/location (1).html">Location</a>
-                <a class="nava" TITLE="Visit TexasScripturefest.com.com/passages.html" href="http://TexasScripturefest.com/passegas.html">Passages</a>
+                <a class="nava" style="background-color: white" href="index.html">Texas ScriptureFest</a>
+                <a class="nava" TITLE="Visit TexasScripturefest.com/location.html" href="location.html">Location</a>
+                <a class="nava" TITLE="Visit TexasScripturefest.com.com/passages.html" href="passegas.html">Passages</a>
             <br><br></nav><br><br></h2>
         </header><br>
 <h1><p style="color: white;background-color: red;opacity: 60%;"><br>Theme TBD<br><br></p></h1>
@@ -35,7 +35,6 @@
             <img class="img2" style="float: right;margin-right: 2%;" src="texas capitol.png" alt="the capitol of texas">
             <img class="img2" style="margin-top: 10%;margin: 20px;" src="alamo.png" alt="the alamo"><br><br>
         </section>-->
-        <script src="scriptorium script (1).js"></script>
         <section class="section" style="color: white;"><br>
         <!--<i style="font-size: 6vw;" class="fas">&#xf017;</i>--><h1 class="sectionh1" id="r"></h1>
         </section>
@@ -48,7 +47,7 @@
         <section style="width: 70%;background-color: white;color: red;">
             <h1>Got Questions? <br>We Got Answers!</h1>
             <!--<p>Click here to ask a question.</p>--><hr class="sectionhr"><br>
-            <a class="nana" href="http://texasscripturefest.com/support.html" style="height: 50px; width: 10%;">Click here</a><br><br>
+            <a class="nana" href="forms/support.html" style="height: 50px; width: 10%;">Click here</a><br><br>
         </section><br><br>
         <script>
             var day = "days";
