--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <!--<div class="warning" style="background-color: red;">Registration ends on, August 6</div>-->
         <header>
             
-            <h1 class="headerh1"><img style="height: 45px; width: auto;margin-top: 35px;" alt="Texas" src="assets/Images/texas sc.png"> ScriptureFest</h1>
+            <h1 class="headerh1"><img style="height: 45px; width: auto;margin-top: 35px;" draggable="false" alt="Texas" src="assets/Images/texas sc.png"> ScriptureFest</h1>
             <h1 style="color:black;">July 29, 2023</h1>
             <h2 class="headerh2"><a id="x" TITLE="Visit Scripturefest.com" target="_blank" href="https://scripturefest.com" class="nava"></a></h2>
             <h2 class="headerh2"><nav><br>
